# pg-db-controller

./: Cargo.toml  Dockerfile  application.yaml  test.yaml
.github/workflows/: build-deploy.yml  cleanup-old-images.yml  pr-build.yaml
.sqlx/: query-0e2740ed594d3f2bc0d302c1facd6633ba52a7f714f7be0b13d6c65eff193f63.json
kubernetes/: database.yaml  database2.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  secret.yaml  serviceaccount.yaml
src/: crdgen.rs  lib.rs  main.rs
