[package]
name = "pg-db-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
futures = "0.3.31"
k8s-openapi = { version = "0.26.0", features = ["latest"] }
kube = { version = "2.0.1", features = ["runtime", "client", "derive"] }
rand = "0.9.2"
schemars = "1.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "tls-rustls", "macros", "chrono"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"
